--- a/client/src/components/Projects/Projects.module.scss
+++ b/client/src/components/Projects/Projects.module.scss
@@ -192,7 +192,7 @@
 
   span {
     display: inline-block;
-    margin-right: 0.5rem;
+    margin: 0 0.5rem 0.5rem 0;
     background: #242424f6;
     color: $main-color;
     font-size: 13px;
