--- a/client/src/components/admin/AdminWriteEditor.scss
+++ b/client/src/components/admin/AdminWriteEditor.scss
@@ -70,6 +70,9 @@
         margin-left: -15px;
         background-color: #f8f6f3b8;
       }
+      p {
+        margin: 6px 0;
+      }
     }
 
     @media all and (min-width: 768px) and (max-width: 1023px) {
